<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newnoteActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:text="@string/edityourtext"
                android:textSize="20dp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.8"
            android:gravity="center">

            <EditText
                android:id="@+id/etnote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:textCursorDrawable="@drawable/color_cursor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.75"
            android:layout_marginBottom="20dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:textColor="@color/colorPrimary"
                android:text="@string/edit"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:onClick="edit"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.7">

            <Button
                android:id="@+id/btndelete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/delete"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:onClick="delete"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>